--- a/myshoppingbackend/pom.xml
+++ b/myshoppingbackend/pom.xml
@@ -28,6 +28,16 @@
 		</dependency>
 		
 				<!-- SPRING -->
+				
+						<!-- SPRING -->
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+			
+		</dependency>
+		
 		<dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-context</artifactId>
@@ -71,6 +81,19 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		
+		<!-- SLF4J Logging -->
+ <dependency>
+ <groupId>ch.qos.logback</groupId>
+ <artifactId>logback-classic</artifactId>
+ <version>1.2.1</version>
+ </dependency>
+
+ <dependency>
+ <groupId>org.slf4j</groupId>
+ <artifactId>jcl-over-slf4j</artifactId>
+ <version>1.7.24</version>
+ </dependency>
 		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
