--- a/myshoppingbackend/pom.xml
+++ b/myshoppingbackend/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>	
+		
+		<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-web</artifactId>
+    <version>${spring.version}</version>
+</dependency>
 
 	<!-- H2 Database -->
 		<dependency>
@@ -94,6 +100,20 @@
  <artifactId>jcl-over-slf4j</artifactId>
  <version>1.7.24</version>
  </dependency>
+ 
+ <!-- validation -->
+ 
+ <dependency>
+<groupId>org.hibernate</groupId>
+<artifactId>hibernate-validator</artifactId>
+<version>5.4.1.Final</version>
+</dependency>
+
+<dependency>
+<groupId>javax.validation</groupId>
+<artifactId>validation-api</artifactId>
+<version>1.1.0.Final</version>
+</dependency>
 		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
